RESOLVED FIXED50576
REGRESSION (r70546): script-controlled autocomplete popup shows up in the wrong place on RTL page
https://bugs.webkit.org/show_bug.cgi?id=50576
Summary REGRESSION (r70546): script-controlled autocomplete popup shows up in the wro...
James Robinson
Reported 2010-12-06 11:23:06 PST
The URL in the bug description renders incorrectly after r70546 - when typing in the entry field, the javascript-positioned autocomplete shows up in the wrong place. See http://crbug.com/62451 for more details. The popup positioning logic appears to be in http://www.d.co.il/Hebrew/scripts/acXml.js.
Attachments
Patch (1.32 KB, patch)
2010-12-06 20:55 PST, Dave Hyatt
no flags
Patch (80.79 KB, patch)
2010-12-08 10:19 PST, Dave Hyatt
andersca: review+
Dave Hyatt
Comment 1 2010-12-06 20:55:16 PST
Created attachment 75783 [details] Patch Fix RTL positioning. It never worked.
James Robinson
Comment 2 2010-12-06 21:26:42 PST
It's hilarious (in a sad clown kind of way) that this patch doesn't change any layout test results. We need some regression tests for this.
Dave Hyatt
Comment 3 2010-12-08 10:19:56 PST
Dave Hyatt
Comment 4 2010-12-08 10:31:43 PST
Fixed in r73531.
Note You need to log in before you can comment on or make changes to this bug.