https://bugs.webkit.org/show_bug.cgi?id=50576

Reviewed by Anders Carlsson.

REGRESSION in position of autocomplete popup on RTL page.

RTL static position computation did not subtract out the width of the enclosing box if the
immediate parent was a RenderInline.  This bug was exposed by properly changing the RenderView
to be RTL when the document was RTL.

Added three new tests in fast/block/positioning.

WebCore:

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computePositionedLogicalWidth):

LayoutTests:

* fast/block/positioning/rtl-static-positioning-inline-block.html: Added.
* fast/block/positioning/rtl-static-positioning.html: Added.
* fast/block/positioning/table-cell-static-position.html: Added.
* platform/mac/fast/block/positioning/rtl-static-positioning-expected.checksum: Added.
* platform/mac/fast/block/positioning/rtl-static-positioning-expected.png: Added.
* platform/mac/fast/block/positioning/rtl-static-positioning-expected.txt: Added.
* platform/mac/fast/block/positioning/rtl-static-positioning-inline-block-expected.checksum: Added.
* platform/mac/fast/block/positioning/rtl-static-positioning-inline-block-expected.png: Added.
* platform/mac/fast/block/positioning/rtl-static-positioning-inline-block-expected.txt: Added.
* platform/mac/fast/block/positioning/table-cell-static-position-expected.checksum: Added.
* platform/mac/fast/block/positioning/table-cell-static-position-expected.png: Added.
* platform/mac/fast/block/positioning/table-cell-static-position-expected.txt: Added.



Canonical link: https://commits.webkit.org/63941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73531 268f45cc-cd09-0410-ab3c-d52691b4dbfc